--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,8 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base"
-  ]
+  ],
+  "enabledManagers": ["npm"],
+  "timezone": "Asia/Tokyo",
+  "schedule": ["before 6am on Monday"],
 }
