--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/wattanx/nuxt-bridge-migration-tools#readme",
   "devDependencies": {
     "@types/cli-progress": "^3.11.0",
+    "@types/jscodeshift": "^0.11.6",
     "@types/node": "^18.11.18",
     "@types/yargs": "^17.0.20",
     "prettier": "^2.8.3",
@@ -37,7 +38,10 @@
     "@vue/compiler-sfc": "^3.2.45",
     "cli-progress": "^3.11.2",
     "colorette": "^2.0.19",
+    "globby": "^13.1.3",
+    "jscodeshift": "^0.14.0",
     "ts-morph": "^17.0.1",
+    "vue-codemod": "^0.0.5",
     "yargs": "^17.6.2"
   }
 }
